--- a/start/index.html
+++ b/start/index.html
@@ -12,10 +12,24 @@
 
 <body>
   <div class="sidebar">
-    <a href="#home">Home</a>
-    <a href="#services">Services</a>
-    <a href="#clients">Clients</a>
-    <a href="#contact">Contact</a>
+
+    <div class="sidebar_logo">
+      <div class="logo"></div>
+    </div>
+
+
+    <ul class="sidebar_list">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Clients</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+
+
+    <div class="sidebar_avatar">
+      <div class="avatar"></div>
+      <p class="username">gilxhon_h</p>
+    </div>
   </div>
 </body>
 
